# lasersim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOVELTY.md  README.md  SECURITY.md  ablation.py  adaptive_optics.py  amplifier.py  ase.py  autocorrelation.py  beam_combining.py  beam_quality.py  beam_shaping.py  breakdown.py  cavity_modes.py  chain_e2e.py  cli.py  coatings.py  config.py  contrast.py  cooling.py  cpa.py  damage.py  dashboard.py  data_io.py  depolarization.py  dermatology.py  detectors.py  dispersion.py  efficiency.py  environment_report.py  examples.py  forward_model.py  frog.py  (+55 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: README.md  api_test.py  app.py  beam_service.py  config.py  deployment.md  health.py  logging_config.py  model_manager.py  monitoring.py  openapi_config.py  predict.py  routes.py  schemas.py  security.py
autonomous_ai/: README.md  experiment_controller.py  optimization_agent.py
deployment/: README.md  docker-compose.prod.yml  gateway_routes.md  healthcheck.sh  nginx.conf  tls_config.md
docs/: PYTHON311_CI_TRIAGE.md  PYTHON_RUNTIME_DIAGNOSTICS.md  QUICKSTART_WORKFLOW.md  SKILL_REGISTRY.md  reference-review.md  security-audit.md  validation-evidence.md
kubernetes/: README.md
observability/: README.md
results/: MULTISYSTEM.md  NILORE_VALIDATION.md  PAPER_DRAFT.md  REPRODUCE.md  RESULTS.md  beam_3d_base64.txt  inverse_design.json  neural_inverse.json  surrogate_net.json  surrogate_net_smoke.json  surrogate_p2.json  sweep_pump.csv
(+674 files in other folders)
